# mugui

./: .gitignore  CMakeLists.txt  README.md  go.mod  mugui_build.sh
doc/: basics.md
examples/: demo.minion  grid.minion  grid2.minion  studentgroups.minion
examples/buttons/: main.go
examples/complex/: main.go
examples/demo/: main.go
examples/grid/: main.go
examples/grid2/: main.go
mugui/: CMakeLists.txt  backend.h  callback.h  cgo_linux_amd64.go  connector.cpp  connector.h  dialogs.cpp  dialogs.h  editform.cpp  fltk-build-invoke.go  fltk-build.go  functions.cpp  functions.h  go.mod  iofile.cpp  iofile.h  layout.cpp  layout.h  minion.cpp  minion.h  minion_gui.cpp  minion_gui.go  rowtable.cpp  rowtable.h  support_functions.cpp  support_functions.h  textline.cpp  widget.cpp  widget.h  widgets.cpp  widgets.h
mugui/examples/: buttons.minion  buttons1.minion  complex.minion  complex1.minion  grid1.minion
mugui/examples/buttons/: main.go
mugui/examples/complex/: main.go
mugui/examples/demo/: main.go
mugui/examples/grid/: main.go
mugui/examples/grid2/: main.go
test1/: CMakeLists.txt  main.cpp
